# sasso-python

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
native/: Cargo.toml  cbindgen.toml
native/include/: sasso.h
native/src/: lib.rs
scripts/: build_native.py  retag_wheel.py
src/sasso/: __init__.py  _ffi.py
tests/: test_sasso.py
